[gd_scene load_steps=15 format=2]

[ext_resource path="res://fishticuffs/decor/shafts.gd" type="Script" id=1]
[ext_resource path="res://fishticuffs/hook.tscn" type="PackedScene" id=2]
[ext_resource path="res://fishticuffs/title.png" type="Texture" id=3]
[ext_resource path="res://pieces/controls_label.gd" type="Script" id=4]
[ext_resource path="res://fishticuffs/fishticuffs.gd" type="Script" id=5]
[ext_resource path="res://fishticuffs/ui/hp.png" type="Texture" id=6]
[ext_resource path="res://fishticuffs/ui/health_display.tscn" type="PackedScene" id=7]
[ext_resource path="res://fishticuffs/theme_main.tres" type="Theme" id=8]
[ext_resource path="res://fishticuffs/ui/score_display.tscn" type="PackedScene" id=9]
[ext_resource path="res://fishticuffs/ui/time_display.tscn" type="PackedScene" id=10]
[ext_resource path="res://fishticuffs/spawner.gd" type="Script" id=11]
[ext_resource path="res://misc/fnt_tiny_outline.tres" type="DynamicFont" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 272, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 144 )

[node name="fishticuffs" type="Node2D"]
script = ExtResource( 5 )

[node name="spawner" type="Node" parent="."]
script = ExtResource( 11 )

[node name="timer" type="Timer" parent="spawner"]
wait_time = 6.0
autostart = true

[node name="bac" type="Polygon2D" parent="."]
color = Color( 0.105882, 0.141176, 0.278431, 1 )
polygon = PoolVector2Array( 0, 0, 512, 0, 512, 288, 0, 288 )

[node name="shafts" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="ui" type="Control" parent="."]
margin_right = 512.0
margin_bottom = 288.0
theme = ExtResource( 8 )

[node name="title" type="TextureRect" parent="ui"]
margin_left = -16.0
margin_right = 184.0
margin_bottom = 40.0
texture = ExtResource( 3 )
expand = true

[node name="health_display" parent="ui" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 40.0
margin_right = 16.0
margin_bottom = 40.0
sprite = ExtResource( 6 )
frames = 3
empty_frame = 2
offset = Vector2( 0, 18 )

[node name="score_display" parent="ui" instance=ExtResource( 9 )]
margin_left = 40.0
margin_top = 32.0
margin_right = 128.0
margin_bottom = 48.0

[node name="time_display" parent="ui" instance=ExtResource( 10 )]
margin_left = 32.0
margin_top = 56.0
margin_right = 120.0
margin_bottom = 64.0

[node name="egress_help" type="Label" parent="ui"]
margin_left = 40.0
margin_top = 48.0
margin_right = 138.0
margin_bottom = 62.0
custom_colors/font_outline_modulate = Color( 0.105882, 0.141176, 0.278431, 1 )
custom_fonts/font = ExtResource( 12 )
text = "Press {interact} to stop fishing"
script = ExtResource( 4 )
base_text = "Press {interact} to stop fishing"

[node name="hook" parent="." instance=ExtResource( 2 )]
position = Vector2( 256, 144 )

[node name="border" type="StaticBody2D" parent="."]
position = Vector2( 256, 144 )

[node name="hitbox0" type="CollisionShape2D" parent="border"]
position = Vector2( 0, -152 )
shape = SubResource( 1 )

[node name="hitbox1" type="CollisionShape2D" parent="border"]
position = Vector2( 0, 152 )
shape = SubResource( 1 )

[node name="hitbox2" type="CollisionShape2D" parent="border"]
position = Vector2( -264, 0 )
shape = SubResource( 2 )

[node name="hitbox3" type="CollisionShape2D" parent="border"]
position = Vector2( 264, 0 )
shape = SubResource( 2 )

[node name="vertiborder" type="StaticBody2D" parent="."]
position = Vector2( 256, 144 )
collision_mask = 2

[node name="hitbox0" type="CollisionShape2D" parent="vertiborder"]
position = Vector2( 0, -152 )
shape = SubResource( 1 )

[node name="hitbox1" type="CollisionShape2D" parent="vertiborder"]
position = Vector2( 0, 152 )
shape = SubResource( 1 )

[connection signal="timeout" from="spawner/timer" to="spawner" method="_on_timer_timeout"]
[connection signal="died" from="hook" to="." method="_on_hook_died"]
